--- a/index.html
+++ b/index.html
@@ -2,40 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pause Tool Fix</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>English Speaking Test</title>
 </head>
 <body>
-  <div id="widget-container"></div>
 
-  <!-- Correct tool registration BEFORE widget loads -->
-  <script>
-    window.ElevenLabsConAI = window.ElevenLabsConAI || {};
-    window.ElevenLabsConAI.defineClientTool = function(name, tool) {
-      window.ElevenLabsConAI._tools = window.ElevenLabsConAI._tools || {};
-      window.ElevenLabsConAI._tools[name] = tool;
-    };
+  <!-- Embed the widget -->
+  <elevenlabs-convai
+    agent-id="agent_01jz3mzxkkfw09832nvhjtxqyy"
+    pause-tool-name="PAUSE_5_Second"
+    pause-endpoint="https://timeout-ri84.onrender.com/pause">
+  </elevenlabs-convai>
 
-    // Register the pause tool
-    window.ElevenLabsConAI.defineClientTool("PAUSE_5_Second", {
-      type: "pause",
-      args: {
-        duration: 5000
-      }
-    });
-  </script>
-
-  <!-- Load widget AFTER tool is registered -->
+  <!-- Load the widget SDK -->
   <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async></script>
-
+  
+  <!-- Register the client tool -->
   <script>
-    window.addEventListener("DOMContentLoaded", function () {
-      const widget = document.createElement("elevenlabs-convai");
-      widget.setAttribute("agent-id", "agent_01jz3mzxkkfw09832nvhjtxqyy");
-      widget.setAttribute("pause-tool-name", "PAUSE_5_Second");
-      widget.setAttribute("pause-endpoint", "https://timeout-ri84.onrender.com/pause");
+    document.addEventListener('DOMContentLoaded', () => {
+      const widget = document.querySelector('elevenlabs-convai');
+      if (!widget) return;
 
-      document.getElementById("widget-container").appendChild(widget);
+      widget.addEventListener('elevenlabs-convai:call', (ev) => {
+        const { clientTools } = ev.detail.config;
+        clientTools.PAUSE_5_Second = async () => {
+          await fetch(widget.getAttribute('pause-endpoint'), { method: 'POST' });
+          console.log('PAUSE_5_Second invoked');
+          return {};
+        };
+      });
     });
   </script>
+  
 </body>
 </html>
