--- a/index.html
+++ b/index.html
@@ -1,55 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Speaking-Test Widget</title>
+  <meta charset="UTF-8">
+  <title>English Speaking Test</title>
 
-  <!-- ❶ Load the SDK *deferred* so it’s guaranteed to be parsed before our JS runs -->
+  <!-- ① load the SDK *deferred* (executes before the inline script) -->
   <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" defer></script>
+
+  <style>
+    /* optional centering */
+    #widget { max-width: 650px; margin: 3rem auto; }
+  </style>
 </head>
 <body>
-  <div id="widget-container" style="max-width:650px;margin:3rem auto;"></div>
+  <!-- where the widget will appear -->
+  <div id="widget"></div>
 
-  <!-- ❷ Our bootstrap code -->
+  <!-- ② bootstrap after DOM is ready *and* SDK is present -->
   <script>
-    /**
-     * Wait for BOTH:
-     *   – the page’s DOMContentLoaded
-     *   – the SDK script to create window.ElevenLabsConAI
-     */
-    function whenSDKReady (cb) {
-      const test = () => {
-        if (window.ElevenLabsConAI && typeof window.ElevenLabsConAI.mount === 'function') {
-          cb();
-        } else {
-          requestAnimationFrame(test);
-        }
-      };
-      test();
+    function whenSDKReady(cb) {
+      const tick = () =>
+        (window.ElevenLabsConAI && typeof window.ElevenLabsConAI.mount === 'function')
+          ? cb()
+          : requestAnimationFrame(tick);
+      tick();
     }
 
     document.addEventListener('DOMContentLoaded', () => {
       whenSDKReady(() => {
-        console.log('✅ SDK detected, mounting widget…');
+        console.log('✅ SDK detected – mounting widget');
 
         window.ElevenLabsConAI.mount(
           {
             agentId: 'agent_01jz3mzxkkfw09832nvhjtxqyy',
 
-            /* ❸ Register the pause tool right here */
+            /* ③ tool is registered here, before the first agent turn */
             clientTools: {
               PAUSE_5_Second: async () => {
-                console.log('↪ calling /pause …');
+                console.log('↪ POST /pause');
                 await fetch('https://timeout-ri84.onrender.com/pause', { method: 'POST' });
                 console.log('✅ PAUSE_5_Second finished');
                 return {};
               }
-            },
-
-            /* optional visual tweaks */
-            theme: 'light'
+            }
           },
-          document.getElementById('widget-container')
+          document.getElementById('widget')
         );
       });
     });
