--- a/index.html
+++ b/index.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta charset="UTF‑8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>English Speaking Test</title>
 </head>
 <body>
-
-  <!-- Working widget embedding -->
   <elevenlabs-convai
     agent-id="agent_01jz3mzxkkfw09832nvhjtxqyy"
-    style="display: block; margin: 2rem auto;"
-  ></elevenlabs-convai>
+    pause-tool-name="PAUSE_5_Second"
+    pause-endpoint="https://timeout-ri84.onrender.com/pause">
+  </elevenlabs-convai>
 
-  <!-- Load the SDK -->
   <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async></script>
-
-  <!-- Register client tool AFTER widget and SDK load -->
   <script>
-    function registerTool() {
-      if (
-        window.ElevenLabsConAI &&
-        window.ElevenLabsConAI.clientTools
-      ) {
-        window.ElevenLabsConAI.clientTools.PAUSE_5_Second = async () => {
-          console.log('↪ POST /pause');
-          await fetch('https://timeout-ri84.onrender.com/pause', { method: 'POST' });
-          console.log('✅ PAUSE_5_Second finished');
-          return {};
+    document.addEventListener('elevenlabs-convai:load', () => {
+      const widget = document.querySelector('elevenlabs-convai');
+      widget.addEventListener('elevenlabs-convai:call', (ev) => {
+        ev.detail.config.clientTools = {
+          PAUSE_5_Second: async () => {
+            await fetch(widget.getAttribute('pause-endpoint'), { method: 'POST' });
+            console.log('PAUSE_5_Second invoked');
+            return {};
+          }
         };
-        console.log('✅ Tool registered');
-      } else {
-        console.warn('⏳ Waiting for SDK...');
-        setTimeout(registerTool, 100);
-      }
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      registerTool();
+      });
     });
   </script>
-
 </body>
 </html>
