--- a/index.html
+++ b/index.html
@@ -2,54 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>English Speaking Test</title>
+  <title>English Proficiency Test Widget</title>
+  <style>
+    body { margin: 0; }
+  </style>
 </head>
 <body>
+  <!-- Container where ElevenLabs will mount -->
+  <div id="agent-widget"></div>
 
-  <!-- 1 . Embed the widget -->
-  <elevenlabs-convai
-    agent-id="agent_01jz3mzxkkfw09832nvhjtxqyy">
-  </elevenlabs-convai>
-
-  <!-- 2 . Load the widget SDK -->
-  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async></script>
-
-  <!-- 3 . Register the client-side tool **before the first call** -->
+  <!-- Inject ElevenLabs config BEFORE loader -->
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const widget = document.querySelector('elevenlabs-convai');
-      if (!widget) return;
+    (function () {
+      // 1. Read the query string IN THE IFRAME URL
+      const params = new URLSearchParams(window.location.search);
 
-      /* grab URL params once */
-      const qs        = new URLSearchParams(window.location.search);
-      const email     = qs.get('email')      || '';
-      const firstName = qs.get('first_name') || '';
-      const lastName  = qs.get('last_name')  || '';
+      // 2. Build user_info object
+      const user_info = {
+        email:      params.get('email')      || '',
+        first_name: params.get('first_name') || '',
+        last_name:  params.get('last_name')  || ''
+      };
 
-      widget.addEventListener('elevenlabs-convai:call', (event) => {
-        // client-side tool
-        event.detail.config.clientTools = {
-          PAUSE_5_Second: async () => {
-            try {
-              await fetch('https://timeout-ri84.onrender.com/pause', { method: 'POST' });
-              console.log('PAUSE_5_Second invoked');
-            } catch (err) {
-              console.error('Pause endpoint failed:', err);
-            }
-            return {};          // must return an object (can be empty)
-          }
-        };
-
-        /* inject metadata so it travels with the session */
-        event.detail.config.conversationMetadata = {   <!--  ← only change -->
-          email:      email,
-          first_name: firstName,
-          last_name:  lastName
-        };
-      });
-    });
+      // 3. Expose ElevenLabs config globally
+      window.elevenlabs = {
+        agent: "agent_01jz3mzxkkfw09832nvhjtxqyy", // your real agent ID
+        user_info
+      };
+    })();
   </script>
 
+  <!-- 4. Load the official widget loader AFTER config is set -->
+  <script src="https://agent.elevenlabs.io/agent-widget-loader.js"></script>
 </body>
 </html>
